--- a/method-a/Dockerfile.multiarch
+++ b/method-a/Dockerfile.multiarch
@@ -8,4 +8,9 @@ RUN echo "I'm amd64"                              # arch=amd64
 RUN echo "I'm arhmf"                              # arch=armhf
 RUN echo "I'm powerpc"                            # arch=powerpc
 
+ADD overlay-common  /overlay
+ADD overlay-amd64   /overlay-amd64                # arch=amd64
+ADD overlay-armhf   /overlay-armhf                # arch=armhf
+ADD overlay-powerpc /overlay-powerpc              # arch=powerpc
+
 CMD ["uname -a; cowsay hello world"]
